<resources>
    <!-- general -->
    <string name="app_name">TakeAway</string>
    <string name="empty_field">%1$s can\'t be empty!</string>

    <!-- activity_create_user -->
    <string name="iv_logo">Take Away Logo</string>
    <string name="settings_icon_image">settings icon image</string>
    <string name="etName_hint">Name</string>
    <string name="name_field_error_message">This name isn\'t valid!</string>
    <string name="etGmail_hint">Gmail</string>
    <string name="gmail_field_error_message">This Gmail isn\'t valid!</string>
    <string name="etLocation_hint">Location</string>
    <string name="location_field_error_message">This location isn\'t valid!</string>
    <string name="etIsAdmin_PlaceHolder_hint">Is Administrator?</string>
    <string name="etIsActive_PlaceHolder_hint">Is Active?</string>
    <string name="btnDone_text">Done</string>
    <string name="btnDelete_text">Delete</string>
    <string name="invalidForm">Please fill in the form correctly</string>
    <string name="loading">Loading…</string>

    <!-- activity_create_user -->
    <string name="timer">Timer</string>
    <string name="projectid_tv">Project ID</string>
    <string name="edit_btn">Edit</string>
    <string name="addManually">Add Hours</string>
    <string name="projectname_tv">Project Name</string>
    <string name="projectdec_tv">ProjectDec</string>

    <!-- dialog_list_buttons -->
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="logged_out">Logged Out</string>
    <string name="logged_in">Logged in as</string>

    <string name="project_name">Project Name:</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="discard_project">Discard Project</string>
    <string name="save_project">Save Project</string>
    <string name="assign_employees">Assign Employees</string>
    <string name="projectid">ProjectID</string>
    <string name="delete_project">Delete Project</string>
    <string name="edit_project">Edit Project</string>

    <!-- Adding Hours Activity -->
    <string name="tv_staticTextDate">Date</string>
    <string name="tv_staticTextBegin">Time when started</string>
    <string name="tv_staticTextEnd">Time when ended</string>
    <string name="tv_textDate">Click here to select an date</string>
    <string name="tv_textForHours">Click here to select an time</string>
    <string name="btn_saveHoursButton">Save</string>
    <string name="tv_textForDescription">Please enter a description</string>

    <!-- Timer Activity -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="btnNotifications">Notifications</string>
    <string name="btnCSV">CSV</string>


    <string name="tv_staticNotificationTime">Set time</string>
    <string name="tv_TextNotification">Click here to select a time</string>
    <string name="pause_add">Add</string>
    <string name="assigned_users">Assigned Users:</string>
    <string name="title_activity_tabbed_administrator">TabbedAdministratorActivity</string>
    <string name="tab_text_1">Projects</string>
    <string name="tab_text_2">Employees</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="searchEmployeeHint">Find employees</string>
    <string name="btn_begin_date">Begin Date</string>
    <string name="btn_end_date">End Date</string>
    <string name="btn_exporteren">Export</string>
    <string name="tv_pausedialog">Fill in your pause</string>
</resources>

